# deep-learning-from-scratch-3

./: AGENTS.md  LEARNING_NOTES.md  LEARNING_PROGRESS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  learning_question.yml  step_tracker.yml
notes/: README.md  RESEARCH_QUEUE.md  design_patterns.md  exploration_01_python_basics.md  exploration_02_backend_adapters.md  exploration_02_numpy_basics.md  exploration_03_backend_adapters.md  exploration_03_symbolic_vs_numeric.md  exploration_04_symbolic_vs_numeric.md  exploration_05_python_object_model.md  exploration_06_data_types.md  exploration_07_syntax_idioms.md  exploration_08_monkey_patching.md  exploration_09_abc_abstract.md  exploration_10_what_is_derivative.md  exploration_11_autodiff_modes.md  exploration_12_language_binding.md
rezero/: __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  functions_conv.py  layers.py  models.py  optimizers.py  transforms.py  utils.py
rezero/steps/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step08.py  step09.py  step10.py  step11.py  step12.py  step13.py  step14.py  step15.py  step16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step24.py  step25.py  step26.py  step27.py  step28.py  step29.py  step30.py  step31.py  step32.py  step33.py  step34.py  step35.py  step36.py  step37.py  step38.py  step39.py  step40.py  (+20 more)
rezero/tests/: __init__.py  test_basic_math.py  test_batchnorm.py  test_broadcast.py  (+18 more)
