[project]
name = "dezero"
# dezero/__init__.py 의 __version__ 과 동일하게 유지 (원본 메타정보 보존)
version = "0.0.13"
description = "DeZero — 『밑바닥부터 시작하는 딥러닝 3』의 오리지널 딥러닝 프레임워크 (학습용 포크)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Koki Saitoh (original)", url = "https://github.com/oreilly-japan/deep-learning-from-scratch-3" }]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "matplotlib",
]

# 책 본문(steps/)과 프레임워크(dezero/) 실행에는 위 dependencies면 충분.
# 일부 examples(ex: grad_cam, style_transfer 등)는 추가 패키지가 필요:
#   uv add scipy pillow opencv-python
# CuPy(GPU)는 macOS 미지원이라 설치하지 않음. dezero/cuda.py는 자동으로 NumPy로 fallback.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dezero"]

[tool.uv]
# 학습용이므로 이 프로젝트 자체를 패키지로 빌드하지는 않음.
package = false
